Integrate GitHub course features: topic-based structure, learning materials, and enhanced course metadata