@@ -86,7 +86,7 @@ public class VideoServiceClean {
             // Return only preview videos if not paid
             return allVideos.stream()
                 .filter(Video::isPreview)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
         }
     }
     
