@@ -159,7 +159,7 @@ public class VideoServiceNew {
             // Return only preview videos if not paid
             return allVideos.stream()
                 .filter(Video::isPreview)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
         }
     }
     
